--- a/css/interaction.css
+++ b/css/interaction.css
@@ -7,14 +7,16 @@
 
 .videoArea {
 	position: relative;
+	width: 33.5%;
+	border: 1px solid black;
 }
 
 .playButton {
 	background-color: rgba(40, 169, 220, 0.3);
-	width: 800px;
-	height: 450px;
+	width: 100%;
+	height: 100%;
 	position: absolute; //important, make the videoArea relative, and the box absolute so they are overlapped
-	top: 60px;
+	top:  0px;
 	left: 0px;
 	pointer-events: auto;
 	cursor: pointer;
