--- a/css/interaction.css
+++ b/css/interaction.css
@@ -104,4 +104,11 @@ p {
 .loading{
   display: none;
   position: absolute;
+  background-color: rgba(71, 71, 71, 0.5);
+  width: 100%;
+  height: 100%;
+  top:  0px;
+  left: 0px;
+  pointer-events: auto;
+  z-index: 20;
 }
