--- a/css/interaction.css
+++ b/css/interaction.css
@@ -12,7 +12,7 @@
 	background-color: rgba(40, 169, 220, 0);
 	width: 100%;
 	height: 100%;
-	position: absolute; //important, make the videoArea relative, and the box absolute so they are overlapped
+  position: absolute;  /* important, make the videoArea relative, and the box absolute so they are overlapped */
 	top:  0px;
 	left: 0px;
 	pointer-events: auto;
@@ -24,7 +24,7 @@
   background-color: rgba(190, 19, 22, 0);
   width: 100%;
   height: 100%;
-  position: absolute; //important, make the videoArea relative, and the box absolute so they are overlapped
+  position: absolute;  /* important, make the videoArea relative, and the box absolute so they are overlapped */
   top:  0px;
   left: 0px;
   pointer-events: auto;
@@ -33,17 +33,19 @@
 }
 
 .loader1 {
-	positon: absolute;
+	position: absolute;
   display: none;
 }
 
 button {
+  transform: scale(0.65);
   background-color: black;
   color: white !important;
   border-radius: 0 !important;
 }
 
 h1, h2, p {
+  transform: scale(0.7);
   position: absolute;
   width: 50%;
   margin-left: 50%;
@@ -74,15 +76,14 @@ p {
 
 .circle {
   margin: 0 auto;
-  width: 40px;
-  height: 40px;
-  border: 2px solid CadetBlue;
+  width: 25px;
+  height: 25px;
+  border: 2px solid rgba(241, 234, 234, 0.836);
   border-radius: 50%;
   position: absolute;
   top: 67%;
   left: 48%;
 }
-
 .one {
   animation: circle 4s infinite linear;
 }
@@ -111,4 +112,29 @@ p {
   left: 0px;
   pointer-events: auto;
   z-index: 20;
+}
+
+.jumpToButton{
+  color: whitesmoke;
+  text-shadow: 1px 1px 2px black;
+  font-size: 12px;
+  transform: scale(0.6);
+  display: none;
+	background-color: rgba(91, 172, 37, 0);
+	width: 12%;
+	height: 13%;
+	position: absolute; /* important, make the videoArea relative, and the box absolute so they are overlapped */
+	pointer-events: auto;
+	cursor: pointer;
+	z-index: 30;
+}
+.jumpToButton:hover {
+  text-decoration:underline;
+}
+
+.jumpToRipple {
+  cursor: pointer;
+  display: none;
+	position: absolute;
+  z-index: 30;
 }
