--- a/css/interaction.css
+++ b/css/interaction.css
@@ -8,6 +8,7 @@
   display: inline-flex;
 }
 
+/* Buttons */
 .playButton {
 	background-color: rgba(40, 169, 220, 0);
 	width: 100%;
@@ -33,8 +34,9 @@
 }
 
 .loader1 {
-	position: absolute;
-  display: none;
+  position: absolute;
+  display: inline;
+  z-index: 20;
 }
 
 button {
@@ -44,56 +46,26 @@ button {
   border-radius: 0 !important;
 }
 
+/* Carousel Font */
 h5, h4, p {
-  transform: scale(0.7);
   position: absolute;
   width: 50%;
   margin-left: 50%;
 }
 
 h4 {
+  font-size: 3.5vw;
   margin-top: 5%;
 }
 
 h5 {
-  margin-top: 22%;
+  font-size: 3.0vw;
+  margin-top: 17%;
 }
 
 p {
-  margin-top: 24%
-}
-
-
-
-@keyframes circle {
-  from {
-    transform: scale(0)
-  }
-  to {
-    transform: scale(1)
-  }
-}
-
-.circle {
-  margin: 0 auto;
-  width: 25px;
-  height: 25px;
-  border: 2px solid rgba(241, 234, 234, 0.836);
-  border-radius: 50%;
-  position: absolute;
-  top: 67%;
-  left: 48%;
-}
-.one {
-  animation: circle 4s infinite linear;
-}
-
-.two {
-  animation: circle 3s infinite linear;
-}
-
-.three {
-  animation: circle 2s infinite linear;
+  font-size: 2vw;
+  margin-top: 21%
 }
 
 /* styling Carousel */
@@ -111,6 +83,21 @@ ol.carousel-indicators li, ol.carousel-indicators li.active {
   transform: scale(0.6);
 }
 
+/* Carousel Button */
+.btn-carousel{
+  font-size: 3vw;
+  /* height: 8vh; */
+}
+.btn-shop{
+  position: absolute;
+  margin-left: 44%;
+  margin-top: 34.5%;
+}
+.btn-back{
+  position: absolute;
+  margin-left: 44.1%;
+  margin-top: 40%;
+}
 
 /* loading screen */
 .loading{
@@ -122,14 +109,13 @@ ol.carousel-indicators li, ol.carousel-indicators li.active {
   top:  0px;
   left: 0px;
   pointer-events: auto;
-  z-index: 20;
 }
 
 /* Jump button */
 .jumpToButton{
   color: whitesmoke;
   text-shadow: 1px 1px 2px black;
-  font-size: 12px;
+  font-size: 2.5vw;
   transform: scale(0.6);
   display: none;
 	background-color: rgba(91, 172, 37, 0);
@@ -149,4 +135,61 @@ ol.carousel-indicators li, ol.carousel-indicators li.active {
   display: none;
 	position: absolute;
   z-index: 30;
+}
+
+/* Click Effects */
+div.clickEffect{
+  position:fixed;
+  box-sizing:border-box;
+  border-style:solid;
+  border-color:#000000;
+  border-radius:50%;
+  animation:clickEffect 0.4s ease-out;
+  z-index:99999;
+}
+@keyframes clickEffect{
+  0%{
+    opacity:1;
+    width:0.5em; height:0.5em;
+    margin:-0.25em;
+    border-width:0.5rem;
+  }
+  100%{
+    opacity:0.2;
+    width:15em; height:15em;
+    margin:-7.5em;
+    border-width:0.03rem;
+  }
+}
+
+@keyframes circle {
+  from {
+    transform: scale(0)
+  }
+  to {
+    transform: scale(1)
+  }
+}
+
+/* Loader Circle */
+.circle {
+  margin: 0 auto;
+  width: 5vw;
+  height: 5vw;
+  border: 0.2vw solid rgba(241, 234, 234, 0.836);
+  border-radius: 50%;
+  position: absolute;
+  top: 67%;
+  left: 48%;
+}
+.one {
+  animation: circle 4s infinite linear;
+}
+
+.two {
+  animation: circle 3s infinite linear;
+}
+
+.three {
+  animation: circle 2s infinite linear;
 }
