--- a/css/interaction.css
+++ b/css/interaction.css
@@ -36,11 +36,11 @@
 .loader1 {
   position: absolute;
   display: inline;
-  z-index: 20;
+  z-index: 30;
 }
 
 button {
-  transform: scale(0.65);
+  /* transform: scale(0.65); */
   background-color: black;
   color: white !important;
   border-radius: 0 !important;
@@ -59,22 +59,63 @@ h4 {
 }
 
 h5 {
+  border-radius: 10%;
+  background-color: #c3ddf4;
   font-size: 3.0vw;
+  color: rgba(0, 0, 0, 0.644);
+  font-weight: bold;
+  max-width: fit-content;
   margin-top: 17%;
 }
 
 p {
-  font-size: 2vw;
+  /* transform: scale(0.7); */
+  font-size: 2.5vw;
   margin-top: 21%
 }
+/* Mobile Carousel */
+@media screen and (max-width: 600px){
+  p {
+    font-size:2.5vw;
+  }
+  .btn-carousel {
+    transform: scale(0.65);
+    margin-left: 45%;
+  }
+  .btn-shop{
+    position: absolute;
+    margin-left: 45%;
+    margin-top: 35.5%;
+  }
+  .btn-back{
+    position: absolute;
+    margin-left: 45%;
+    margin-top: 43%;
+  }
+}
+@media screen and (min-width: 601px){
+  .btn-shop{
+    position: absolute;
+    margin-left: 50%;
+    margin-top: 35.5%;
+  }
+  .btn-back{
+    position: absolute;
+    margin-left: 50%;
+    margin-top: 43%;
+  }
+}
+
+
 
 /* styling Carousel */
 .carousel{
   display: none;
   position: absolute;
-  z-index: 30;
+  z-index: 40;
 }
 .carousel-indicators {
+  display: none;
   bottom: 5px;
 }
 ol.carousel-indicators li, ol.carousel-indicators li.active {
@@ -88,16 +129,16 @@ ol.carousel-indicators li, ol.carousel-indicators li.active {
   font-size: 3vw;
   /* height: 8vh; */
 }
-.btn-shop{
+/* .btn-shop{
   position: absolute;
-  margin-left: 44%;
-  margin-top: 34.5%;
+  margin-left: 50%;
+  margin-top: 35.5%;
 }
 .btn-back{
   position: absolute;
-  margin-left: 44.1%;
-  margin-top: 40%;
-}
+  margin-left: 50%;
+  margin-top: 43%;
+} */
 
 /* loading screen */
 .loading{
@@ -109,6 +150,7 @@ ol.carousel-indicators li, ol.carousel-indicators li.active {
   top:  0px;
   left: 0px;
   pointer-events: auto;
+  z-index: 30;
 }
 
 /* Jump button */
@@ -116,7 +158,7 @@ ol.carousel-indicators li, ol.carousel-indicators li.active {
   color: whitesmoke;
   text-shadow: 1px 1px 2px black;
   font-size: 2.5vw;
-  transform: scale(0.6);
+  /* transform: scale(0.6); */
   display: none;
 	background-color: rgba(91, 172, 37, 0);
 	width: 12%;
